# image-processing

./: .gitignore  LICENSE
stitcher/: CMakeLists.txt  README.md  main.cpp
stitcher/calibration/: extract_video_frames.py
stitcher/calibration/ocam_calib/: setup.sh
stitcher/calibration/ocam_calib/patch/autoCornerFinder_linux/: Makefile.patch  cvcalibinit3.cpp.patch  cvcalibinit3.h.patch  main.cpp.patch
stitcher/include/airmap/: camera.h  camera_models.h  distortion.h  do_not_copy_or_move.h  gimbal.h  images.h  logger.h  logging.h  opencv_stitcher.h  panorama.h  stitcher.h  stitcher_configuration.h
stitcher/include/airmap/monitor/: estimator.h  monitor.h  operation.h  timer.h
stitcher/include/airmap/opencv/: forward.h  matchers.h  seam_finders.h
stitcher/src/: camera.cpp  camera_models.cpp  cropper.cpp  cropper.h  cubemap.cpp  cubemap.h  distortion.cpp  filesystem.cpp  gimbal.cpp  images.cpp  panorama.cpp  stitcher.cpp  stitcher_configuration.cpp
stitcher/src/monitor/: estimator.cpp  monitor.cpp  timer.cpp
stitcher/src/opencv/: forward.cpp  matchers.cpp  seam_finders.cpp
stitcher/test/: CMakeLists.txt  airmap_stitcher.test.bats  airmap_stitcher_failures.test.bats
stitcher/test/bats/: CMakeLists.txt  install_bats.sh
stitcher/test/gtest/: CMakeLists-googletest.txt  CMakeLists-googletest.txt.in  CMakeLists.txt  camera.cpp  camera_models.cpp  distortion.cpp  gimbal.cpp  images.cpp  panorama.cpp  should_rotate.cpp
stitcher/test/gtest/monitor/: estimator.cpp  monitor.cpp  timer.cpp
stitcher/test/gtest/opencv_assert/: CMakeLists.txt  mat_compare.h
stitcher/test/gtest/opencv_assert/test/: mat_compare.cpp
stitcher/test/gtest/util/: CMakeLists.txt  images.h  mat_compare.h
stitcher/test/gtest/util/test/: mat_compare.cpp
