cmake_minimum_required(VERSION 3.6)

include(${CMAKE_CURRENT_SOURCE_DIR}/test/gtest/CMakeLists-googletest.txt)
googletest_setup()

include(${CMAKE_CURRENT_SOURCE_DIR}/test/gtest/util/CMakeLists.txt)

add_executable(cameraTests test/gtest/camera.cpp)
add_executable(cameraModelsTests test/gtest/camera_models.cpp)
add_executable(distortionTests test/gtest/distortion.cpp)
add_executable(panoramaTests test/gtest/panorama.cpp)
add_executable(gimbalTests test/gtest/gimbal.cpp)
add_executable(imagesTests test/gtest/images.cpp)
add_executable(shouldRotateTests test/gtest/should_rotate.cpp)
add_executable(monitorTests test/gtest/monitor/monitor.cpp)
add_executable(monitorEstimatorTests test/gtest/monitor/estimator.cpp)
add_executable(monitorTimerTests test/gtest/monitor/timer.cpp)

target_link_libraries(cameraTests gtest gtest_main airmap_stitching)
target_link_libraries(cameraModelsTests gtest gtest_main airmap_stitching Boost::filesystem)
target_link_libraries(distortionTests gtest gtest_main airmap_stitching Boost::filesystem)
target_link_libraries(panoramaTests gtest gtest_main airmap_stitching Boost::filesystem)
target_link_libraries(gimbalTests gtest gtest_main airmap_stitching)
target_link_libraries(imagesTests gtest gtest_main airmap_stitching util Boost::filesystem)
target_link_libraries(shouldRotateTests gtest gtest_main airmap_stitching util Boost::filesystem)
target_link_libraries(monitorTests gtest gtest_main airmap_stitching)
target_link_libraries(monitorEstimatorTests gtest gtest_main airmap_stitching)
target_link_libraries(monitorTimerTests gtest gtest_main airmap_stitching)

add_test(cameraTests cameraTests)
add_test(cameraModelsTests cameraModelsTests)
add_test(distortionTests distortionTests)
add_test(panoramaTests panoramaTests)
add_test(gimbalTests gimbalTests)
add_test(imagesTests imagesTests)
add_test(shouldRotateTests shouldRotateTests)
add_test(monitorTests monitorTests)
add_test(monitorEstimatorTests monitorEstimatorTests)
add_test(monitorTimerTests monitorTimerTests)
